Tweak to ensure logos are horizontally aligned, and also allow a bit more horizontal space for hoer text until the largest screen size

--- a/tbx/static_src/sass/components/_client-item.scss
+++ b/tbx/static_src/sass/components/_client-item.scss
@@ -59,7 +59,7 @@
         border-bottom: 2px solid transparent; // prevent layout shift
 
         @include media-query(large) {
-            grid-template-rows: auto auto;
+            grid-template-rows: 1fr 0.5fr;
         }
     }
 
@@ -134,6 +134,7 @@
             margin-top: 5px;
             margin-left: 20px;
             text-align: center;
+            min-height: 0;
 
             &::after {
                 content: '';
